[package]
name = "librashader-spirv-cross"
version = "0.23.5"
authors = ["Joshua Groves <josh@joshgroves.com>", "Ronny Chan <ronny@ronnychan.ca>"]
description = "Temporary spirv_cross fork for librashader purposes"
license = "MIT/Apache-2.0"
homepage = "https://github.com/chyyran/spirv_cross"
repository = "https://github.com/chyyran/spirv_cross"
readme = "../README.md"
build = "build.rs"
edition = "2018"

[features]
default = []
glsl = []
hlsl = []
msl = []

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
cc = { version = "1", features = ["parallel"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.33"
js-sys = "0.3.10"

[package.metadata.docs.rs]
features = ["glsl", "hlsl", "msl"]
