[package]
name = "librashader-spirv-cross"
version = "0.25.1"
authors = ["Joshua Groves <josh@joshgroves.com>", "Ronny Chan <ronny@ronnychan.ca>"]
description = "spirv_cross fork maintained for librashader"
license = "MIT/Apache-2.0"
homepage = "https://github.com/chyyran/spirv_cross"
repository = "https://github.com/chyyran/spirv_cross"
readme = "../README.md"
build = "build.rs"
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
glsl = []
hlsl = []
msl = []

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
cc = { version = "1", features = ["parallel"] }

[target.wasm32-wasi.dependencies]
wasm-bindgen = "0.2.33"
js-sys = "0.3.10"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.33"
js-sys = "0.3.10"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3.0"

[package.metadata.docs.rs]
features = ["glsl", "hlsl", "msl"]

[build-dependencies]
build-target = "0.4.0"